Many styles and user snippet

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,17 @@
 // Colors
-$dark-grey: #333;
+$dark-grey: #333333;
+$grey: #666666;
+$teal: #16697a;
+$orange: #db6400;
+$light-orange: #ffa62b;
+$white: #f8f1f1;
 
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
 
 // Spacing
+$xs-size: 0.8rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
