Cleaning images and using SVGs

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $dark-grey: #333333;
 $grey: #666666;
+$light-grey: #999999;
 $teal: #16697a;
 $orange: #db6400;
 $light-orange: #ffa62b;
